--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pdf uploader</title>
-</head>
-<body>
-  <h1>Index page</h1>
-</body>
+<html lang="es">
+  <head>
+    <%- include('./components/head') %>
+    <title>pdf uploader</title>
+  </head>
+  <body>
+    <h1>Index page</h1>
+    <!-- TODO logo -->
+
+    <%- include("./components/form") %>
+    
+  </body>
 </html>
