--- a/views/components/form.ejs
+++ b/views/components/form.ejs
@@ -1,80 +1,221 @@
 <form action="">
   <fieldset name="GeneralInformation">
-    <h1>
+    <legend class="h1 mb-4">
       Datos Generales Completar todos los campos de este formulario, de no
       aplicar colocar N/A
-    </h1>
-    <label>Razón Social (Nombre de la persona jurídica):</label>
-    <input type="text" name="NameOfCompany" />
+    </legend>
 
-    <label>Lugar de Constitución (País):</label>
-    <input type="text" name="Country" />
+    <div class="mb-3">
+      <label for="NameOfCompany" class="form-label"
+        >Razón Social (Nombre de la persona jurídica):</label
+      >
+      <input
+        type="text"
+        class="form-control"
+        id="NameOfCompany"
+        name="NameOfCompany"
+      />
+    </div>
 
-    <label>Pagina Web:</label>
-    <input type="text" name="Website" />
+    <div class="mb-3">
+      <label for="Country" class="form-label"
+        >Lugar de Constitución (País):</label
+      >
+      <input type="text" class="form-control" id="Country" name="Country" />
+    </div>
 
-    <br />
+    <div class="mb-3">
+      <label for="Website" class="form-label">Pagina Web:</label>
+      <input type="text" class="form-control" id="Website" name="Website" />
+    </div>
 
-    <label>No.de Escritura Pública:</label>
-    <input type="text" name="PublicDeedNumber" />
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <label for="PublicDeedNumber" class="form-label"
+          >No. de Escritura Pública:</label
+        >
+        <input
+          type="text"
+          class="form-control"
+          id="PublicDeedNumber"
+          name="PublicDeedNumber"
+        />
+      </div>
 
-    <label>Fecha de Escritura Pública:</label>
-    <input type="date" name="DateOfPublicDeed" />
+      <div class="col-md-4">
+        <label for="DateOfPublicDeed" class="form-label"
+          >Fecha de Escritura Pública:</label
+        >
+        <input
+          type="date"
+          class="form-control"
+          id="DateOfPublicDeed"
+          name="DateOfPublicDeed"
+        />
+      </div>
 
-    <label>Fecha de Constitución:</label>
-    <input type="date" name="DateOfIncorporation" />
+      <div class="col-md-4">
+        <label for="DateOfIncorporation" class="form-label"
+          >Fecha de Constitución:</label
+        >
+        <input
+          type="date"
+          class="form-control"
+          id="DateOfIncorporation"
+          name="DateOfIncorporation"
+        />
+      </div>
+    </div>
 
-    <label>Rollo / Tomo:</label>
-    <input type="text" name="RollOrVolume" />
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <label for="RollOrVolume" class="form-label">Rollo / Tomo:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="RollOrVolume"
+          name="RollOrVolume"
+        />
+      </div>
 
-    <label>Documento:</label>
-    <input type="text" name="Document" />
+      <div class="col-md-4">
+        <label for="Document" class="form-label">Documento:</label>
+        <input type="text" class="form-control" id="Document" name="Document" />
+      </div>
 
-    <label>Ficha / Folio:</label>
-    <input type="text" name="File" />
-    <br />
+      <div class="col-md-4">
+        <label for="File" class="form-label">Ficha / Folio:</label>
+        <input type="text" class="form-control" id="File" name="File" />
+      </div>
+    </div>
 
-    <label
-      >Domicilio (Detalle exacto de su ubicación fisica (lugar donde ejecuta sus
-      actividades):</label
-    >
-    <input type="text" name="Adress" />
+    <div class="mb-3">
+      <label for="Adress" class="form-label"
+        >Domicilio (Detalle exacto de su ubicación fisica):</label
+      >
+      <input type="text" class="form-control" id="Adress" name="Adress" />
+    </div>
 
-    <label>Tipo de Entidad:</label>
-    <input type="checkbox" name="Corporation" />
-    <span>Corporación</span>
-    <input type="checkbox" value="Foundation" />
-    <span>Fundación</span>
-    <input type="checkbox" value="Escrow" />
-    <span>Fideicomiso</span>
+    <div class="mb-3">
+      <label class="form-label">Tipo de Entidad:</label>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Corporation"
+          name="Corporation"
+        />
+        <label class="form-check-label" for="Corporation">Corporación</label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Foundation"
+          name="Foundation"
+        />
+        <label class="form-check-label" for="Foundation">Fundación</label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Escrow"
+          name="Escrow"
+        />
+        <label class="form-check-label" for="Escrow">Fideicomiso</label>
+      </div>
+    </div>
 
-    <br />
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <label for="PostalAddress" class="form-label">Dirección postal:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="PostalAddress"
+          name="PostalAddress"
+        />
+      </div>
 
-    <label>Dirección postal:</label>
-    <input type="text" name="PostalAddress" />
-    <label>Teléfono de Oficina:</label>
-    <input type="text" name="OfficeTelephone" />
-    <label>Fax:</label>
-    <input type="tel" name="Fax" />
-    <label>Otro:</label>
-    <input type="text" name="OtherAccess" />
+      <div class="col-md-4">
+        <label for="OfficeTelephone" class="form-label"
+          >Teléfono de Oficina:</label
+        >
+        <input
+          type="text"
+          class="form-control"
+          id="OfficeTelephone"
+          name="OfficeTelephone"
+        />
+      </div>
 
-    <br />
+      <div class="col-md-4">
+        <label for="Fax" class="form-label">Fax:</label>
+        <input type="tel" class="form-control" id="Fax" name="Fax" />
+      </div>
+    </div>
 
-    <label>Empresa con presencia Fiscal:</label>
-    <input type="checkbox" name="Company-with-Fiscal-presence-Yes" />
-    <span>Si</span>
-    <input type="checkbox" name="Company-with-Fiscal-presence-No" />
-    <span
-      >No Operativa (en caso de no ser operativa la información la sustentarán
-      el o los beneficiarios finales).</span
-    >
+    <div class="mb-3">
+      <label for="OtherAccess" class="form-label">Otro:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="OtherAccess"
+        name="OtherAccess"
+      />
+    </div>
 
-    <label>Tipo de cuenta:</label>
-    <input type="checkbox" name="Discrecional" />
-    <span>Discrecional</span>
-    <input type="checkbox" name="NoDiscrecional" />
-    <span>No Discrecional</span>
+    <div class="mb-3">
+      <label class="form-check-label">Empresa con presencia Fiscal:</label>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Company-with-Fiscal-presence-Yes"
+          name="Company-with-Fiscal-presence-Yes"
+        />
+        <label class="form-check-label" for="Company-with-Fiscal-presence-Yes"
+          >Si</label
+        >
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Company-with-Fiscal-presence-No"
+          name="Company-with-Fiscal-presence-No"
+        />
+        <label class="form-check-label" for="Company-with-Fiscal-presence-No"
+          >No Operativa (en caso de no ser operativa la información la
+          sustentarán el o los beneficiarios finales).</label
+        >
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">Tipo de cuenta:</label>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="Discrecional"
+          name="Discrecional"
+        />
+        <label class="form-check-label" for="Discrecional">Discrecional</label>
+      </div>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="NoDiscrecional"
+          name="NoDiscrecional"
+        />
+        <label class="form-check-label" for="NoDiscrecional"
+          >No Discrecional</label
+        >
+      </div>
+    </div>
   </fieldset>
 
   <fieldset name="EconomicBeneficiaryofPersonalorNaturalAccount">
@@ -122,6 +263,7 @@
     <span>Envía sus Títulos</span>
   </fieldset>
   <fieldset name="SourceOfResourcesOrHeritage">
+    <h1>Fuente de los Recursos o Patrimonio</h1>
     <label>Nombre del Empleador / Independiente:</label>
     <input type="text" name="NameOfEmployer" />
     <label>Ingreso Anual: (USD):</label>
@@ -184,19 +326,226 @@
   <fieldset>
     <h1>Depósito Inicial</h1>
     <label>Usted estará depositando o transfiriendo:</label>
-    <input type="checkbox" name="depositCash">
+    <input type="checkbox" name="depositCash" />
     <span>Efectivo</span>
-    <input type="checkbox" name="depositSecurities">
+    <input type="checkbox" name="depositSecurities" />
     <span>Títulos Valores</span>
-    <input type="checkbox" name="depositBoth">
+    <input type="checkbox" name="depositBoth" />
     <span>Ambos</span>
 
     <label>Indique el Monto (USD):</label>
     <span>Efectivo:</span>
-    <input type="text" name="depositedCash">
+    <input type="text" name="depositedCash" />
     <span>Títulos Valores:</span>
-    <input type="text" name="depositedSecurities">
-    
-    
+    <input type="text" name="depositedSecurities" />
+
+    <br />
+
+    <label>Institución de donde Provienen los Fondos:</label>
+    <span>1- </span>
+    <input type="text" name="InstitutionFromWhichTheFundsCome1" />
+    <span>2- </span>
+    <input type="text" name="InstitutionFromWhichTheFundsCome2" />
+
+    <input type="checkbox" name="cash1" />
+    <span>Efectivo</span>
+    <input type="checkbox" name="cash2" />
+    <span>Títulos</span>
+
+    <label>Tiempo de Relación con la Institución:</label>
+    <input type="text" name="RelationshipTimeWithTheInstitution1" />
+    <input type="text" name="RelationshipTimeWithTheInstitution2" />
+  </fieldset>
+  <fieldset>
+    <h1>Persona Políticamente Expuesta</h1>
+    <p>
+      El cliente debe indicar expresamente si es Persona Políticamente Expuesta
+      (PEP). PEP, es una persona que desempeña o ha desempeñado funciones
+      públicas prominentes dentro o fuera del país, tales como jefes de Estado o
+      de Gobierno, políticos de alto nivel, funcionarios gubernamentales,
+      judiciales u oficiales militares de alto nivel, ejecutivos de alto nivel
+      de corporaciones que pertenecen al Estado y funcionarios importantes de
+      partidos políticos. (Con base en la definición establecida en el Artículo
+      4 Ley 23/2015)
+    </p>
+
+    <label>Si</label>
+    <label>No</label>
+    <br />
+    <span>¿Es Ud. Una Persona Políticamente Expuesta (PEP)?</span>
+    <input type="checkbox" name="PoliticallyExposedCheckYes" />
+    <input type="checkbox" name="PoliticallyExposedCheckNo" />
+    <br />
+    <span
+      >¿Es Ud. Familiar Cercano (cónyuge o 1er grado consanguinidad) de
+      PEP?</span
+    >
+    <input type="checkbox" name="CloseRelativeCheckYes" />
+    <input type="checkbox" name="CloseRelativeCheckNo" />
+    <br />
+    <span
+      >¿Declara que en los últimos 5 años (según la definición) se considera
+      como PEP?</span
+    >
+    <input type="checkbox" name="ConsideredPEPCheckYes" />
+    <input type="checkbox" name="ConsideredPEPCheckNo" />
+  </fieldset>
+  <fieldset>
+    <h1>Comunicación Seleccionar uno o varios campos</h1>
+    <label>Titular</label>
+    <label>Cotitular</label>
+    <label>Firmante (s)</label>
+    <label>Apoderado</label>
+    <label>Beneficiario Accionista</label>
+    <br />
+    <span>Personas autorizadas para instruir órdenes</span>
+    <input type="checkbox" name="Titular" />
+    <input type="checkbox" name="co-title" />
+    <input type="checkbox" name="Signatory" />
+    <input type="checkbox" name="Attorney" />
+    <input type="checkbox" name="RecipientShareholder" />
+    <br />
+    <label>Correo</label>
+    <label>Documentos Escritos</label>
+    <label>Vía Telefónica</label>
+    <label>Plataformas de Texto</label>
+    <label>Directamente por el Cliente en el Sistema</label>
+    <label>Todas las Anteriores</label>
+    <br />
+    <span>Las órdenes podrán ser colocadas por</span>
+    <input type="checkbox" name="Mail" />
+    <input type="checkbox" name="DocumentsWritings" />
+    <input type="checkbox" name="ViaTelephone" />
+    <input type="checkbox" name="TextPlatforms" />
+    <input type="checkbox" name="DirectlyByTheClientInTheSystem" />
+    <input type="checkbox" name="AppPrevious" />
+    <br />
+    <label
+      >Confirmar las instrucciones emitidas (compra y venta de títulos y
+      valores)</label
+    >
+    <input type="checkbox" name="SendYes" /><span>Si</span>
+    <input type="checkbox" name="SendNo" /><span>No</span>
+
+    <label>De ser afirmativa completar:</label>
+    <label>Correo</label>
+    <label>Documentos Escritos</label>
+    <label>Vía Telefónica</label>
+    <label>Plataformas de Texto</label>
+    <input type="checkbox" name="Mail2" />
+    <input type="checkbox" name="DocumentsWritings2" />
+    <input type="checkbox" name="ViaTelephone2" />
+    <input type="checkbox" name="TextPlatforms2" />
+    <br />
+    <label
+      >Es voluntad del cliente que los Estados de Cuenta de su cuenta de
+      inversión reposen en las oficinas de Firmus Financial Inc. a su
+      disposicion y solicitud</label
+    >
+    <label>Si</label>
+    <label>No</label>
+    <br />
+    <input type="checkbox" name="AccountStatementYes" />
+    <input type="checkbox" name="AccountStatementNo" />
+    <br />
+    <label
+      >Si su respuesta es No indique como desea recibir los Estados de
+      Cuenta:</label
+    >
+    <input type="checkbox" name="AccountStatementYes" />
+    <span>Correcto</span>
+    <input type="checkbox" name="AccountStatementNo" />
+    <span>Apartado Postal</span>
+    <br />
+    <span>Desea recibirlos con periodicidad</span>
+
+    <input type="checkbox" name="MonthlyRecieve" />
+    <span>Mensual</span>
+
+    <input type="checkbox" name="QuarterlyRecieve" />
+    <span>Trimestral</span>
+
+    <input type="checkbox" name="SemiannualRecieve" />
+    <span>Semestral</span>
+
+    <input type="checkbox" name="YearlyRecieve" />
+    <span>Anual</span>
+
+    <label
+      >Firmus Financial Inc. tomará como correo autorizado el declarado en Datos
+      Generales, de ser diferente suministrar el mismo:</label
+    >
+    <input type="text" name="otherEmailDecleration" />
+  </fieldset>
+  <fieldset>
+    <h1>Declaración</h1>
+    <p>
+      Confirmo (Confirmamos) que he (hemos) comprendido los términos del acuerdo
+      de cuenta de inversión, incluyendo los modos de comunicación, acceso en
+      línea, notificaciones y demás términos. Actuando en mi propio nombre y de
+      manera voluntaria, declaro (declaramos) que hemos comprendido a cabalidad
+      la información que se ha solicitado y respondiendo los campos de forma
+      veraz y correcta en todo su alcance de forma plena e irrevocable;
+      autorizando a Firmus Financial Inc. para la verificación de los datos
+      suministrados en esta plantilla, advirtiendo de forma inmediata cualquier
+      suceso que implique modificación de la información aquí declarada, de las
+      circunstancias: Económicas, financieras y/o personales, del titular de la
+      cuenta, firmantes autorizados, propietario efectivo o beneficiarios
+      finales. Confirmo (Confirmamos) estar anuente que las condiciones
+      generales entregadas forman parte de la relación contractual presente.
+    </p>
+  </fieldset>
+  <fieldset>
+    <h1>Firma (s) Cliente (s)</h1>
+    <label>Tipo de Firma:</label>
+    <input type="checkbox" name="SignitureTypeJoint" />
+    <input type="checkbox" name="SignitureTypeIndistinct" />
+    <br />
+    <label>FNombre completo (en imprenta):</label>
+    <input type="text" name="FullNameInPrint" />
+    <label>No. de Documento (ID):</label>
+    <input type="text" name="DomumentID" />
+    <label>Date</label>
+    <input type="date" name="DateOfSign" />
+    <br />
+    <canvas height="50" width="50" style="border: 1px solid #000" ></canvas>
+    <br />
+    <label>Firma</label>
+    <br />
+    <label>FNombre completo (en imprenta):</label>
+    <input type="text" name="FullNameInPrint" />
+    <label>No. de Documento (ID):</label>
+    <input type="text" name="DomumentID" />
+    <label>Date</label>
+    <input type="date" name="DateOfSign" />
+    <br />
+    <canvas height="50" width="50" style="border: 1px solid #000"></canvas>
+    <br />
+    <label>Firma</label>
+  </fieldset>
+  <fieldset>
+    <h1>Firma (s) Personal de la Casa de Valores</h1>
+    <label>Nombre del Corredor:</label>
+    <label>Nombre del Oficial de Cumplimiento:</label>
+    <label>Nombre del Ejecutivo Principal:</label>
+    <br />
+    <input type="text" name="RunnerName" />
+    <input type="text" name="ComplianceOfficerName" />
+    <input type="text" name="ChiefExecutiveName" />
+    <br />
+    <span>date</span>
+    <input type="date" name="DateRunner" />
+    <span>date</span>
+    <input type="date" name="DateComplianceOfficer" />
+    <span>date</span>
+    <input type="date" name="DateChiefExecutive" />
+    <br>
+    <canvas height="50" width="50" style="border: 1px solid #000"></canvas>
+    <canvas height="50" width="50" style="border: 1px solid #000"></canvas>
+    <canvas height="50" width="50" style="border: 1px solid #000"></canvas>
+    <br>
+    <label>Firma del Corredor de Valores</label>
+    <label>Firma del Oficial de Cumplimiento</label>
+    <label>Firma del Ejecutivo Principal</label>
   </fieldset>
 </form>
