--- a/views/components/form.ejs
+++ b/views/components/form.ejs
@@ -1,6 +1,9 @@
 <div class="container mb-5">
-  <form action="">
-  <h1 class="h2 bg-primary p-2 text-center text-light m-0">Apertura de Cuenta Persona Juridica</h1>
+  <form action="/submit-form" method="post">
+    <h1 class="h2 bg-primary p-2 text-center text-light m-0">
+      Apertura de Cuenta Persona Juridica
+    </h1>
+
     <fieldset name="GeneralInformation">
       <legend class="h5 mb-3 bg-primary-subtle text-center p-2">
         Datos Generales Completar todos los campos de este formulario, de no
@@ -1120,15 +1123,15 @@
       <div class="row mb-3">
         <div class="col-mb">
           <label>Fecha</label>
-          <input type="date" class="form-control" name="DateRunner" />
+          <input type="date" class="form-control" name="DateRunner1" />
         </div>
         <div class="col-mb">
           <label>Fecha</label>
-          <input type="date" class="form-control" name="DateRunner" />
+          <input type="date" class="form-control" name="DateRunner2" />
         </div>
         <div class="col-mb">
           <label>Fecha</label>
-          <input type="date" class="form-control" name="DateRunner" />
+          <input type="date" class="form-control" name="DateRunner3" />
         </div>
       </div>
       <!-- <div class="row mb-3">
@@ -1157,15 +1160,13 @@
           <label>Firma del Ejecutivo Principal</label>
         </div>
       </div> -->
-
     </fieldset>
 
     <fieldset>
-      <hr>
+      <hr />
       <div>
         <button type="submit" class="btn-lg btn btn-primary">Submit</button>
       </div>
-
     </fieldset>
   </form>
 </div>
