--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('./components/head') %>
     <title>Admin panel</title>
 </head>
 <body>
-    <h1>Admin</h1>
+    <h1>Admin panel</h1>
+    <div class="container">
+      <%- include('./components/crudCard') %>
+    </div>
 </body>
 </html>
