--- a/views/components/form.ejs
+++ b/views/components/form.ejs
@@ -801,7 +801,7 @@
           <label class="form-check-label">Titular</label>
         </div>
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" name="co-title" />
+          <input type="checkbox" class="form-check-input" name="coTitle" />
           <label class="form-check-label">Cotitular</label>
         </div>
         <div class="form-check">
