--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Admin panel</h1>
+    <a href="/">home</a>
     <div class="container">
       <%- include('./components/crudCard') %>
     </div>
