--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Index page</h1>
+    <a href="/admin">admin</a>
     <!-- TODO logo -->
 
     <%- include("./components/form") %>
