--- a/views/forms/leao.ejs
+++ b/views/forms/leao.ejs
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <form action="/submit-form" method="post">
+  <form action="/submit-form-leao" method="post">
     <h1 class="h2 bg-primary p-2 text-center text-light m-0">
       Apertura de Cuenta Persona Juridica
     </h1>
