--- a/views/leao.ejs
+++ b/views/leao.ejs
@@ -6,9 +6,11 @@
     <title>pdf uploader</title>
   </head>
   <body>
+    <h1>Index page</h1>
+    <a href="/admin">admin</a>
     <!-- TODO logo -->
 
-    <a href="/apertura-de-cuenta-persona-juridica">Apertura de Cuenta Persona Juridica</a>
+    <%- include("./forms/leao") %>
 
   </body>
 </html>
