--- a/views/leao.ejs
+++ b/views/leao.ejs
@@ -3,14 +3,14 @@
   <head>
     <%- include('./components/head') %>
 
-    <title>pdf uploader</title>
+    <title>leao</title>
   </head>
   <body>
-    <h1>Index page</h1>
+    <h1>LEAO page</h1>
     <a href="/admin">admin</a>
     <!-- TODO logo -->
 
-    <%- include("./forms/leao") %>
+    <%- include("./forms/leaof") %>
 
   </body>
 </html>
